# efficient-descriptors

./: BAD.cpp  BAD.h  CMakeLists.txt  HashSIFT.cpp  HashSIFT.h  PatchSIFT.cpp  PatchSIFT.h  README.md  _config.yml  homography_demo.cpp  stereo_demo.cpp
_layouts/: default.html
assets/css/: style.scss
